--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="titulo-principal">Barbearia Alura</h1>
-        <div class="caixa">
-            <h1><img src="logo.png" alt="Logo Barbearia Alura"></h1>
-
+        <div class="caixa"></div>
+            <h1 class="logo" > <img class="titulo-principal" src="img/logo.png"> Barbearia Alura </h1>
+        
+          
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
