--- a/produtos.html
+++ b/produtos.html
@@ -44,6 +44,10 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
+    </footer>
 </body>
 
 </html>
