alteraçao de preços e add mais um modelo de corte de cabelo

--- a/produtos.html
+++ b/produtos.html
@@ -31,16 +31,16 @@
                 <p class="produto-preco">R$ 40,00</p>
             </li>
             <li>
-                <h2>Barba</h2>
-                <img src="img/barba.jpg">
-                <p class="produto-descricao">Corte e desenho profissional de barba</p>
-                <p class="produto-preco">R$ 30,00</p>
-            </li>
-            <li>
-                <h2>Cabelo + Barba</h2>
+                <h2>Cabelo com massagen + Barbaterapia</h2>
                 <img src="img/cabelo+barba.jpg">
+                <p class="produto-descricao">Pacote completo de cabelo e barba </p>
+                <p class="produto-preco">R$ 95,00</p>
+            </li>
+             <li>
+                <h2>Degrade</h2>
+                <img src="img/degrade1.jpg">
                 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-                <p class="produto-preco">R$ 70,00</p>
+                <p class="produto-preco">R$ 50,00</p>
             </li>
         </ul>
     </main>
