--- a/produtos.html
+++ b/produtos.html
@@ -39,7 +39,7 @@
              <li>
                 <h2>Degrade</h2>
                 <img src="img/degrade1.jpg">
-                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                <p class="produto-descricao"></p>
                 <p class="produto-preco">R$ 50,00</p>
             </li>
         </ul>
