--- a/produtos.html
+++ b/produtos.html
@@ -31,7 +31,7 @@
                 <p class="produto-preco">R$ 40,00</p>
             </li>
             <li>
-                <h2>Cabelo com massagen + Barbaterapia</h2>
+                <h2>Cabelo com massagem + Barbaterapia</h2>
                 <img src="img/cabelo+barba.jpg">
                 <p class="produto-descricao">Pacote completo de cabelo e barba </p>
                 <p class="produto-preco">R$ 95,00</p>
