--- a/produtos.html
+++ b/produtos.html
@@ -27,13 +27,13 @@
             <li>
                 <h2>Cabelo</h2>
                 <img src="img/cabelo.jpg">
-                <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                <p class="produto-descricao"></p>
                 <p class="produto-preco">R$ 40,00</p>
             </li>
             <li>
                 <h2>Cabelo com massagem + Barbaterapia</h2>
                 <img src="img/cabelo+barba.jpg">
-                <p class="produto-descricao">Pacote completo de cabelo e barba </p>
+                <p class="produto-descricao"></p>
                 <p class="produto-preco">R$ 95,00</p>
             </li>
              <li>
