--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
-                <img src="img/cabelo.jpg">
+                <img src="img/Cabelo.png">
                 <p class="produto-descricao"></p>
                 <p class="produto-preco">R$ 40,00</p>
             </li>
@@ -41,6 +41,12 @@
                 <img src="img/degrade1.jpg">
                 <p class="produto-descricao"></p>
                 <p class="produto-preco">R$ 50,00</p>
+            </li>
+            <li>
+                <h2>Luzes</h2>
+                <img src="img/">
+                <p class="produto-descricao"></p>
+                <p class="produto-preco">R$ 100,00</p>
             </li>
         </ul>
     </main>
